Fix search box spacing

--- a/client/src/app.scss
+++ b/client/src/app.scss
@@ -62,6 +62,8 @@ main {
 }
 
 .visually-hidden {
+  /* absolute positioning fixes spacing with grid-gap */
+  position: absolute !important;
   font: 0/0 a;
   padding: 0 !important;
   margin: 0 !important;
